fixed carousel responsive/ alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ background-color: #154b67;
 box-shadow: 0px 5px 5px 0px rgb(41, 38, 38);
 }
 
+.jumbotron{
+background-image: url(../images/subtle_white_mini_waves/subtle_white_mini_waves.png);
+}
+
 #main-nav .navbar-brand{
   background-color: #154b67;
   color: white;
@@ -76,12 +80,12 @@ hr:before { /* Not really supposed to work, but does */
 .carousel-inner > .carousel-item > img {
   width:100%;
   height:100%;
-  object-fit: cover;
+
 }
 
 .carousel {
-  width:640px;
-  height:360px;
+  width:100%;
+  height:100%;
   border-radius: 10px;
   box-shadow: 0px 3px 5px 3px rgb(41, 38, 38);
 }
@@ -95,7 +99,7 @@ hr:before { /* Not really supposed to work, but does */
 }
 
 .the-story{
-  font-size: 1.3rem;
+  font-size: 1.4rem;
 }
 
 .masonry{
